<resources>
    <string name="app_name">Fate Explorer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="nameSearch">姓名搜索</string>
    <string name="customSearch">高级搜索</string>
    <string name="listAll">英灵全览</string>
    <string name="hero_star">http://pic1.win4000.com/pic/3/dc/e1221172962.jpg</string>
    <string name="kongming">http://pic1.win4000.com/pic/3/dc/e1221172947.jpg</string>
    <string name="daliushi">https://cn.bing.com/th?id=OIP.P3VrXJi2UFGV46QpZV-JgQHaGE&amp;pid=Api&amp;rs=1&amp;p=0</string>
    <string name="huoxing">http://pic.87g.com/upload/2017/0904/20170904082042870.jpg</string>
    <string name="custom_search_prompt">这世界上就没有混沌恶找不到的英灵</string>
    <string name="name_search_prompt">你要找哪个小可爱呢</string>
    <string name="search_button">召唤</string>
    <string name="search_result_string">看看有没有你想要的呢？</string>
    <string name="search_result_fail">什么都没有呢，混沌恶降临啦！</string>
    <string name="no_more_servent">找不到更多的英灵了呢_(:з」∠)_</string>
    <string name="article_show">看看其他人写了些什么吧</string>
    <string name="book_show">想要成为大师，果然还是要氪金买书呢</string>
    <string name="relative_show">据说按下面的按钮就可以抓来相关的英灵呢</string>
    <string name="pedia_show">据说点一下就可以传送到百科页面去呢</string>
    <string name="origin">起源</string>
    <string name="region">地域</string>
    <string name="servent_class">职阶</string>
    <string name="alignment">阵营</string>



</resources>

