<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExploreActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            layout="@layout/toolbar_main"
            android:id="@+id/toolbar_explore"
            />
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/gudago_smile"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/relative_show"
                    />

                <Button
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/prototype_relative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"/>
                <Button
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/region_relative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    />
                <Button
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/origin_relative"
                    android:layout_width="match_parent"
                    android:onClick="onClick"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/pedia_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <View
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="?android:attr/listDivider" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/three_hits"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/pedia_show"
                    />
                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >
                    <LinearLayout
                        android:id="@+id/pedia_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                    </LinearLayout>


                </HorizontalScrollView>

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:id="@+id/article_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <View
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="?android:attr/listDivider" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/gudago_lead"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/article_show"
                    />


            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/book_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <View
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="?android:attr/listDivider" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/gudago_throw_stone"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/book_show"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>



    </LinearLayout>

</ScrollView>